[package]
name = "poa_demo"
version = "0.3.0"
authors = ["Deusz <deusz@centrumcircle.com>"]
edition = "2018"

[features]
quantum = ["glp"]

[dependencies]
pretty_env_logger = "*"
log = "*"
rand = "0.7.2"
serde = "*"
serde_json = "1.0.40"
serde_derive = "1.0.101"
static_merkle_tree = "1.1.0"
jsonrpc-http-server = "*"
hex = "*"
clap = "2.33.0"
toml = "0.5.6"
base64 = "0.11.0"
blake2 = "*"
rocksdb = "0.13.0"
rmp-serde = "0.14.0"
glp = { path = "./fence" , optional = true}
natsclient = { git = "https://github.com/deuszex/natsclient/" }
ed25519-dalek = { git = "https://github.com/Silur/ed25519-dalek.git" }
wasmi = "0.5.1"
wasmprinter = "0.2.0"