[package]
name = "Qan_POA_Client"
version = "0.5.0"
authors = ["Deusz <deusz@centrumcircle.com>"]
edition = "2018"
build = "build.rs"
links = "hash"

[features]
quantum = ["glp"]

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4.8"
log4rs = "0.11.0"
rand = "0.7.3"
serde = "1.0.105"
serde_json = "1.0.48"
serde_derive = "1.0.105"
static_merkle_tree = "1.1.0"
jsonrpc-http-server = "14.0.6"
hex = "0.4.2"
clap = "2.33.0"
toml = "0.5.6"
base64 = "0.12.0"
blake2 = "0.8.1"
rocksdb = "0.13.0"
rmp-serde = "0.14.3"
glp = { path = "./fence" , optional = true}
natsclient = { git = "https://github.com/deuszex/natsclient/" }
ed25519-dalek = { git = "https://github.com/Silur/ed25519-dalek.git" }
wasmi = "0.6.2"
wasmprinter = "0.2.3"